# neocom

./: .gitignore  Cargo.toml  README.md  test_items.tsv
.playwright-mcp/: page-2026-04-18T21-55-58-519Z.yml  page-2026-04-18T21-56-26-089Z.yml  page-2026-04-18T21-57-13-147Z.yml  page-2026-04-18T21-57-31-970Z.yml  page-2026-04-18T21-57-49-034Z.yml  page-2026-04-18T21-57-58-923Z.yml  page-2026-04-18T21-58-02-918Z.yml  page-2026-04-18T21-58-09-507Z.yml  page-2026-04-18T21-58-13-572Z.yml  page-2026-04-18T21-58-19-793Z.yml  page-2026-04-18T21-58-24-621Z.yml
src/: cli.rs  display.rs  esi.rs  main.rs  systems.rs  zkill.rs
src/commands/: intel.rs  mod.rs  price.rs  status.rs  system.rs  travel.rs  wh.rs
tests/: integration_test.rs
